--- a/src/main/webapp/elvish-composition-archive/chaered/boy-vs-orc.html
+++ b/src/main/webapp/elvish-composition-archive/chaered/boy-vs-orc.html
@@ -18,19 +18,36 @@
 
 <hr/>
 
-<p>Prolog</p>
+<p>
+This is original text by Chaered, first posted on VL.
+</p>
+<p>
+The purpose of writing this text was twofold: to practice my meagre Quenya,
+and to provide a little more copyright-unencumbered Quenya reading material
+for others.</p>
 
-<p><i>Andanéya, enge penya yondo ye oiane nóresse taurelion, halla orontelion ar imbi tai laica restalion.<br/>
+<p>The idea is to have a small Grimm-style story, using fairly basic and
+and standard Quenya, with Neo-Quenya where needed. This included avoiding
+compound tenses; I mostly used the perfect as a plus-quam-perfect tense.</p>
+
+<p>So far, only the first two chapters have been reviewed by others on VL.</p>
+
+<h2>Prolog</h2>
+
+<p><i>
+Andanéya, enge penya yondo ye oiane nóresse taurelion, halla orontelion ar imbe tai laice restalion.<br/>
 Esse i yondo Marco.<br/>
-I nóre náne vanima, mal tarastaina ló i urqui i marner i tauressen.<br/>
-Er tarastaite urco amátie lina yaxeli ar mámar liéo, ar ipílie aurantali.<br/>
-Aran i nóreo eleltanie ohtalli, ono i urco anácie te.<br/>
+I nóre náne vanima, mal tarastaina ló i urqui i marner i tauresse.<br/>
+Er tarastaite urco amátie line yaxeli ar mámar liéo, ar ipílie aurantali.<br/>
+Aran i nóreo eleltanie ohtalli, mal i urco anácie te.<br/>
 I aran eque: “Aiquenen ye nantulya ma i urcullo, antauvan imma harmanyallon.<br/>
 Ar qui ohtar qualta i urco, antauvan sen tiuca yaxe ar mámar yunque.<br/>
 Ar qui roquen nahta i urco, antauvan sen poldórea rocco ar mixa macil.<br/>
-Ar qui cundo telta i easta urco, ecuva sen vesta seldenya.”</i></p>
+Ar qui cundo telta i easta urquo, ecuva sen vesta seldenya.”
+</i></p>
 
-<p>Once upon a time, there was a poor boy, who lived in a land of forests, tall mountains and green fields between them.<br/>
+<p>
+Once upon a time, there was a poor boy, who lived in a land of forests, tall mountains and green fields between them.<br/>
 The boy’s name was Marco.<br/>
 The land was beautiful, but troubled by orcs living in the forest.<br/>
 One troublesome orc had eaten many cows and sheep of the people, and stolen their possessions.<br/>
@@ -38,43 +55,47 @@ The king of the land had sent soldiers, but the orc had killed them.<br/>
 The king declared: “To whoever brings us back something from the orc, I will grant the same from my riches.<br/>
 And if a soldier kills the orc, I will grant him a fat cow and twelve sheep.<br/>
 And if a knight slays the orc, he will receive a strong horse and a sharp-pointed sword.<br/>
-And if a prince ends the orc, my daughter he may wed.”</p>
+And if a prince ends the orc, my daughter he may wed.”
+</p>
 
-<p>The Eyes</p>
+<h2>The Eyes</h2>
 
-<p><i>Marco merne fara i urco, mal amilya váquente sa, þoryaila i qualtauva se.<br/>
+<p><i>
+Marco merne fara i urco, mal amilya váquente sa, þoryaila i qualtauva se.<br/>
 Nea undómesse, Marco lenwente colila i pelecco.<br/>
 Amilya maquente: “Manna ménatye?”<br/>
 Hye quente: “Ménan mina taure, hahyarien tuo.”<br/>
 Mennes pelmanna taureo, ar untumpes inse lasselínen ar loxonen.<br/>
-Tá laryanes tenna hlasses hlón.<br/>
+Tá laranyes tenna hlasses hlón.<br/>
 Nánes i urco pataila i tauresse, colila per-matina yaxe.<br/>
-Marco hilyane quilda i urco estolieryanna, i ara halla ondo.<br/>
-Yá i urco aháruye, Marco hante i pelecco, ta caine hunna.<br/>
-I pelecco aucirne min pire talallo i urco.<br/>
-I urco rúþeave ráve ar ostirne, mal únes cene hye.<br/>
+Marco hilyane quilda i urco estolieryanna, ya ara halla ondo.<br/>
+Yá i urco aháruye, Marco hante i pelecco, ta caine hunenna.<br/>
+I pelecco aucirne i urquo talallo pire min.<br/>
+I urco rúþeáve ráve ar ostirne, mal únes cene hye.<br/>
 I lassi ar loxo pá Marco nurtaner se hunesse taureo.<br/>
 I urco lerence ravila.<br/>
-Marco lempe i pire urco.<br/>
-Ralles coattanna, tá amilya quente: “Masse i toa?”<br/>
+Marco lempe i urquo pire.<br/>
+Ralles coattanna, tá amilya maquente: “Masse i toa?”<br/>
 Isse hanquente: “Náne lilómea i tauresse, únen cene aldar.”<br/>
 I amil nainane: “Iþil silome síla calima!<br/>
-Cé hendityat ólar quolina, ar si umbe nin, pan mauratye hendu máleo tauresse itan nauvatye varna i urcullo.”<br/>
-Epta Marco quente: “Lelyauvan i minassenna ar cestauvan aþaro.”<br/>
+Cé hendityat óla quolina, ar si umbe nin, pan mauratye hendu máleo tauresse itan nauvatye varna i urcullo.”<br/>
+Epta Marco quente: “Lelyuvan i minassenna ar cestauvan aþaro.”<br/>
 Arinesse, Marco lende minassenna ar iquiryane arcandenen cene aran.<br/>
-Apantaila i pire urco i aranna, quentes: “Elépien si i urcullo ahtarien.<br/>
-Mana antauvalye nin ovéallo, ve evestanielye?”<br/>
+Apantaila i urquo pire i aranna, quentes: “Elépien si i urcullo ahtarien.<br/>
+Mana antauvalye nin oveallo, ve evestanielye?”<br/>
 I aran quente: “Equétien i antauvan imya o imni yan tulyal, mal vá antaitanya lyen pirenya.<br/>
-Quíta céla nalye ohtar, san antanye lyen min máma.<br/>
+Quíta céla nalye ohtar, san antanye lyen máma min.<br/>
 Quíta roquen, yacinye sicil.<br/>
-Quíta cundo, min lilte ó seldenya.<br/>
-Aimanen uilye.<br/>
+Quíta cundo, lilte min ó seldenya.<br/>
+Aimanen lalye.<br/>
 Minome, antauvanye lyen ya tupe pirenya: saipot aluo ó tancalli calarusto.<br/>
 Ette máre telcontien, ar ece lyen cene imle ve ohtar aranienyo.”<br/>
 Opo Marco nanewénie mar, quentes amilyan: “Uien hire aþaro, mal hirnen ma ya hepuva talinyat ná laucar.”<br/>
-Amilya hanquente: “Manen lauca talu varyauvar tye i urcullo?”</i></p>
+Amilya hanquente: “Manen lauca talu varyauvar tye i urcullo?”
+</i></p>
 
-<p>Marco wanted to hunt the orc, but his mother forbade it, fearing he would be killed.<br/>
+<p>
+Marco wanted to hunt the orc, but his mother forbade it, fearing he would be killed.<br/>
 One night, Marco went out with the ax.<br/>
 His mother asked, where are you going?<br/>
 He said: “I am going into the forest, to chop wood.”<br/>
@@ -83,7 +104,7 @@ Then he waited until he heard noise.<br/>
 It was the orc, walking in the woods, with a half-eaten cow.<br/>
 Marco followed the orc silently to his camp, which was near a tall rock.<br/>
 When the orc sat down, Marco threw the ax, and lay on the ground.<br/>
-The ax chopped off one of the orc's toes.<br/>
+The ax chopped off one of the orc&apos;s toes.<br/>
 The orc roared in anger and looked around, but he did not see him.<br/>
 The leaves and mud on Marco hid him on the forest floor.<br/>
 The orc ran away, bellowing.<br/>
@@ -104,42 +125,46 @@ But you are not.<br/>
 Instead, I will give you what is on my toe: a pair of leather boots with copper clasps.<br/>
 They are good for marching, and you may consider yourself a soldier of my realm.”<br/>
 After Marco returned home, he told his mother: “I did not find a doctor, but I found something to keep my feet warm.”<br/>
-His mother replied: “How will warm feet keep you safe from the orc?”</i></p>
+His mother replied: “How will warm feet keep you safe from the orc?”
+</p>
 
-<p>The Ears</p>
+<h2>The Ears</h2>
 
-<p><i>Tá andunesse, Marco lenwente colila i luhta ar pilindeli.<br/>
+<p><i>
+Tana andunesse, Marco lenwente colila i luhta ar pilindeli.<br/>
 Amilya maquente: “Manna ménatye?”<br/>
 Se eque: “Ménan taurenna, na fara celve.”<br/>
 Mennes mina taurenna, ar untumpes inse tuistar ar parda.<br/>
-Tá laryanes tenna hlasses hlón.<br/>
+Tá laranyes tenna hlasses hlón.<br/>
 Nánes i urco hraipataila i tauresse, colila per-matina máma.<br/>
-Marco piluccave hilyane urco sinya estolienna, ya arya ara hoa ondo.<br/>
+Marco piluccave hilyane urco sinya estolienna, ya area ara hoa ondo.<br/>
 Yá i urco aháruye, Marco rente amba aldasse ar talo quihtane pilin.<br/>
-I pilin cirne min lepse urcullo.<br/>
-I urco rúþeave ráve ar ostirne, mal únes cene Marco.<br/>
+I pilin cirne leper min urcullo.<br/>
+I urco rúþeáve ráve ar ostirne, mal únes cene Marco.<br/>
 I tuistar ar parda Marcosse nurtaner se aldasse.<br/>
 I urco lerence hútaila.<br/>
-Marco lempe i lepse urco.<br/>
-Ralles coattanna, sí amilya quente: “Yasse ea i celve?”<br/>
+Marco lempe i urquo leper.<br/>
+Ralles coattanna, sí amilya quente: “Masse ea i celve?”<br/>
 Se hanquente: “Romya i tauresse, únen hlare lamni.”<br/>
 Amil nainane: “Súre silome váva moica!<br/>
 Cé hlarityat ólar quolina, ar si umbe nin, pan mauratye hlaru máleo tauresse itan nauvatye varna i urcullo.”<br/>
-Epta Marco quente: “Lelyauvan i minassenna ar cestauvan aþaro.”<br/>
+Epta Marco quente: “Lelyuvan i minassenna ar cestauvan aþaro.”<br/>
 Arinesse, Marco entulle minassenna ar iquiryane atacene aran.<br/>
-Apantaila i lepse urco i aranna, quente: “Elépien si i urcullo ahtarien.<br/>
-Mana antauvalye nin ovéallo, ve evestanielye?”<br/>
-I aran quente: “Equétien antaitan o imni yan tulyal, mal vá antaitanya lyen lepsenya.<br/>
-Quíta céla nalye ohtar, san antanye lyen min yaxe.<br/>
+Apantaila i urquo leper i aranna, quente: “Elépien si i urcullo ahtarien.<br/>
+Mana antauvalye nin oveallo, ve evestanielye?”<br/>
+I aran quente: “Equétien antaitanya o imni yan tulyal, mal vá antaitanya lyen leperinya.<br/>
+Quíta céla nalye ohtar, san antanye lyen yaxe min.<br/>
 Quíta roquen, yacinye þanda.<br/>
-Quíta cundo, min miquelis seldenyo.<br/>
-Aimanen uilye.<br/>
-Minome, antauvanye lyen ya vaita lepsenya: mantalu samindo ar alta corma telpeo.<br/>
+Quíta cundo, miquelis min seldenyo.<br/>
+Aimanen lalye.<br/>
+Minome, antauvanye lyen ya vaita leperinya: mantalu saminda ar alta corma telpeo.<br/>
 Ette valde aráton, ar ece lyen cene imle ve roquen aranienyo.”<br/>
 Opo Marco nanewénie mar, quentes amilyan: “Uien hire aþaro, mal hirnen ma ya hepuva mányat ná laucar.”<br/>
-Amilya hanquente: “Manen lauca mát varyauvar tye i urcullo?”</i></p>
+Amilya hanquente: “Manen lauca mát varyauvar tye i urcullo?”
+</i></p>
 
-<p>That evening at dusk, Marco left the house with his bow and arrows.<br/>
+<p>
+That evening at dusk, Marco left the house with his bow and arrows.<br/>
 His mother asked: “Where are you going?”<br/>
 He said: “I am going into the forest, to hunt deer.”<br/>
 He went into the forest, and covered himself in twigs and treebark.<br/>
@@ -147,7 +172,7 @@ Then he waited until he heard noise.<br/>
 It was the orc, limping in the woods, with a half-eaten sheep.<br/>
 Marco stealthily followed the orc to his new camp, which was near a big rock too.<br/>
 When the orc sat down, Marco climbed a tree, and shot an arrow.<br/>
-The arrow chopped off one of the orc's fingers.<br/>
+The arrow chopped off one of the orc&apos;s fingers.<br/>
 The orc roared and looked around, but he did not see Marco.<br/>
 The twigs and bark on Marco hid him in the tree.<br/>
 The orc ran away, shouting curses.<br/>
@@ -168,50 +193,54 @@ But you are not.<br/>
 Instead, I will give you what girds my finger: silk gloves and a large silver ring.<br/>
 It is an item fit for a noble, and you may consider yourself a knight of my realm.”<br/>
 After Marco returned home, he told his mother: “I did not find a doctor, but I found something to keep my hands warm.”<br/>
-His mother replied: “How will warm hands keep you safe from the orc?”</p>
+His mother replied: “How will warm hands keep you safe from the orc?”
+</p>
 
-<p>The Nose</p>
+<h2>The Nose</h2>
 
-<p><i>Neldea lómenna, Marco lenwente colila i vircolca ar cirmo.<br/>
+<p><i>
+Neldea lómenna, Marco lenwente colila vircolca ar cirma.<br/>
 Amilya maquente: “Manna ménatye?”<br/>
 Se eque: “Ménan taurenna, na comya telumbeli.”<br/>
-Mennes mina palan tauresse, ar untumpes inse litsenen ar mulunen.<br/>
-Tá laryanes tenna hlasses hlón.<br/>
-Nánes i urco lennaila ter taure, lucila per-matina rocco.<br/>
+Mennes palan mina tauresse, ar untumpes inse litsenen ar mulunen.<br/>
+Tá laranyes tenna hlasses hlón.<br/>
+Nánes i urco tulila ter taure, lucila per-matina rocco.<br/>
 Marco lencave hilyane urco estolieryanna.<br/>
-Ve Marco horne, náne ara hoa ondo.<br/>
+Ve Marco horne, nánes ara hoa ondo ata.<br/>
 Yá i urco aháruye, Marco tiríteve rente cas ondo.<br/>
 Retierya carne hlusse, ar i urco tolune ostirila, mal únes cene hye.<br/>
 I litse ar mulo Marcosse nurtaner se i ondosse.<br/>
-Yá i urco enaháruye, Marco quantane i vircolca sarnelínen, ar tumbanes i carenna i urco.<br/>
-I orco talante ar lantane undu.<br/>
-Marco rente undu ar hócirne i cas i urco.<br/>
-Ralles coattanna, sí amilya quente: “Yasse ea i telumbeli?”<br/>
-Se hanquente: “Sustea quelehtiéo i tauresse, úne ece nin nusta auquerien hloirea telumbeli.”<br/>
-Amil nainane: “Vilya silome niþa!<br/>
+Yá i urco enaháruye, Marco quantane i vircolca sarnelínen, ar tumbanes i urquo carenna.<br/>
+I urco talante ar lanante undu.<br/>
+Marco rente undu ar hócirne i urquo cas.<br/>
+Ralles coattanna, sí amilya quente: “Masse ear i telumbeli?”<br/>
+Se hanquente: “Nus enge quelehtiéo i tauresse, úne ece nin nusta auquerien hloirea telumbeli.”<br/>
+Amil nainane: “Vilya silome níþa!<br/>
 Cé nengwitya óla quolina, ar si umbe nin, pan mauratye nengwe máleo tauresse itan nauvatye varna i urcullo.”<br/>
-Epta Marco quente: “Lelyauvan i minassenna ar cestauvan aþaro.”<br/>
+Epta Marco quente: “Lelyuvan i minassenna ar cestauvan aþaro.”<br/>
 Arinesse, Marco enlende minassenna ar iquiryane encene aran.<br/>
-Apantaila i cas urco i aranna, quente: “Elépien si i urcullo ahtarien.<br/>
-Mana antauvalye nin ovéallo, ve evestanielye?”<br/>
-I aran quente: “Equétien antaitan o imni yan tulyal, ono vá antaitanya lyen carinya.<br/>
-Quíta céla nalye ohtar, san antanye lyen min pelmar.<br/>
+Apantanes i urquo cas i aranna, ar quentes: “Elépien si i urcullo ahtarien.<br/>
+Mana antauvalye nin oveallo, ve evestanielye?”<br/>
+I aran quente: “Equétien antaitanya o imni yan tulyal, mal vá antaitanya lyen carinya.<br/>
+Quíta céla nalye ohtar, san antanye lyen pelmar min.<br/>
 Quíta roquen, yacinye taras.<br/>
 Quíta cundo, i hanwa ara seldenya.<br/>
-Aimanen uilye.<br/>
-Minome, antauvanye lyen ya hare carinyasse: carpe heletso ar maltaina rínata.<br/>
-Isse valde aranen, ar ece lyen cene imle ve astamo nossenyo.”<br/>
+Aimanen lalye.<br/>
+Minome, antauvanye lyen ya hare carinyasse: carpe heletso ar maltaina arcas.<br/>
+Sá valde aranen, ar ece lyen cene imle ve astamo nossenyo.”<br/>
 Silume, Marco quente: “Mai, qui talle inye ná ve cundo aranielyo, nai ece nin vesta seldelya?”<br/>
 I aran yesente neme rúþea, mal talo raine, ar quente: “Elye náne verya neve i urco rafila cirmalya, elye ná ve verya neve aranelya rafila lambalya!”<br/>
-Apa Marco nanewénie mar, quentes amilyan: “Uien hire aþaro, mal hirnen ma ya hepuva carinya ná laucar.”<br/>
+Apa Marco nanewénie mar, quentes amilyan: “Uien hire aþaro, mal hirnen ma ya hepuva carinya ná lauca.”<br/>
 Amilya hanquente: “Manen lauca cas varyauvar tye i urcullo?”<br/>
 Marco quente: “Nanye naityana i nalye colonda inyenen.<br/>
 Þá, mo maura máre hendu, máre hlaru, mára nengwe.<br/>
-Entan lelyauvan ar tultauvan aiti i minassello.”<br/>
+Entan lelyuvan ar tultauvan aiti i minassello.”<br/>
 Amilya yaine: “Almelóra yonyonya ólie hwinda!<br/>
-Sí penteas hendyat, tá penteas hlaryat, en penteas nengwirya ar teldave epentanie sámarya!”</i></p>
+Sí róvas hendyat, tá róvas hlaryat, en róvas nengwirya ar teldave oróvies sanarya!”
+</i></p>
 
-<p>Near the third evening, Marco left the house with a basket and a knife.<br/>
+<p>
+Near the third evening, Marco left the house with a basket and a knife.<br/>
 His mother asked, where are you going?<br/>
 He said: “I am going into the forest, to gather mushrooms.”<br/>
 He went deep into the forest, and covered himself in sand and rock dust.<br/>
@@ -248,33 +277,38 @@ Marco said: “I am sorry to be a worry to you.<br/>
 You are right, one needs good eyes, ears and nose.<br/>
 I will go fetch and bring some back from the city tomorrow.”<br/>
 His mother wailed: “My poor son has gone mad!<br/>
-First he loses his eyes, then he loses his ears, then he loses his nose, and now he has lost his mind!”</i></p>
+First he loses his eyes, then he loses his ears, then he loses his nose, and now he has lost his mind!”
+</p>
 
-<p>Epilog</p>
+<h2>Epilog</h2>
 
-<p><i>Neuna auresse Marco lende minassenna ó amilya.<br/>
+<p><i>
+Neuna auresse Marco lende minassenna ó amilya.<br/>
 Iquiryanes amilya hare sendassesse tenna mentarya.<br/>
 Tercáno i aranello tulle i sendassenna.<br/>
-Amil ná þossea i ma urra utúlie yondoryan, ono tercáno quente: “Rie ear mára sinyar, mecin lennalye ó inye i tarassenna.”<br/>
-I aran cáve se, ó Marco ar aranel ar' inse.<br/>
-Marco quente: “Emme, I aran ánie nin selderya vestien.<br/>
+Amil þoronye i ma urra utúlie yondoryan, mal tercáno quente: “Rie ear mára sinyar, mecin tulilye onye i tarassenna.”<br/>
+I aran cáve se, ó Marco ar aranel ar&apos; inse.<br/>
+Marco quente: “Amme, i aran ánie nin selderya vestien.<br/>
 Equétien i ñetuvan máre hendu, máre hlaru, mára nengwe, ar sina naite, ve isse harya ilye ar amba!”<br/>
-Aran quente: “I urco ná vanwa, ar silume elve varne, an yondolya.<br/>
+Aran quente: “I urco ná vanwa, ar silume elve varne, ló yondolya.<br/>
 Sio nás cundo.<br/>
-Mal tenna nauvas aran, moiauvas min aure ilya otsolo hahyarila toa, faraila celve, hya comyaila telumbeli amilyan, pan silo ui ece sen quete i penisse málie hendu, hlaru, hya nengwe!”<br/>
-Ar san ea failasse ar ilquen inteo coiner anda ar alassea.</i></p>
+Mal tenna nauvas aran, moiauvas auresse min ilya otsolo hahyarila toa, faraila celve, hya comyaila telumbeli amilyan, pan silo ui ece sen quete i penisse málie hendu, hlaru, hya nengwe!”<br/>
+Ar san enge failasse ar ilquen inteo coiner anda ar alassea.
+</i></p>
 
-<p>The next day, Marco traveled to the city with his mother.<br/>
+<p>
+The next day, Marco traveled to the city with his mother.<br/>
 He asked her to wait at an inn until he sent word.<br/>
 A messenger came from the king to the inn.<br/>
 The mother was afraid something bad had happened to her son, but the messenger said: “There is only good news, please come with me to the castle.”<br/>
 The king received her, with Marco and the princess beside him.<br/>
-Marco spoke: “Mother, he king has granted me his daughter in marriage.<br/>
+Marco spoke: “Mother, the king has granted me his daughter in marriage.<br/>
 I said I was going to get good eyes, good ears and a good nose, and this was true, as she has all that and more!”<br/>
 The king spoke: “The orc is dead, and we are safe now thanks to your son.<br/>
 Henceforth he is a prince.<br/>
 But until he is king, he will spend one day a week chopping wood, hunting deer or gathering mushrooms for his mother, because he can no longer claim lack of good eyes, ears or nose!”<br/>
-And so justice was done, and they all lived long and happy lives.</p>
+And so justice was done, and they all lived long and happy lives.
+</p>
 
 <p>© 2024, Chaered.</p>
 
