--- a/src/main/webapp/elvish-composition-archive/chaered/princess-and-the-pea.html
+++ b/src/main/webapp/elvish-composition-archive/chaered/princess-and-the-pea.html
@@ -20,7 +20,8 @@
 
 <p>The princess and the pea (Prinsessen på ærten), by Hans Christian Andersen (1835).</p>
 
-<p>Queny Translation by Chaered, first posted on VL, on 2025-01-18.</p>
+<p>Translation by Chaered, first posted on VL, on 2025-01-18.
+Reviewed by VL users.</p>
 
 <p>English translation by H.P. Paull (1872), retrieved via
 <a href="http://www.mythfolklore.net/3043mythfolklore/reading/andersen/pages/01.htm">http://www.mythfolklore.net/3043mythfolklore/reading/andersen/pages/01.htm</a>
@@ -29,73 +30,74 @@ Danish original retrieved from
 <a href="https://tekster.kb.dk/text/adl-texts-hcaeventyr01val-shoot-workid61051">https://tekster.kb.dk/text/adl-texts-hcaeventyr01val-shoot-workid61051</a>
 on same date.</p>
 
-<p>Original Danish text is public domain. English translation is public domain, but rendered on page of first link under BY-NC-SA 2.0 license. Translation provided here by Chaered under CC-BY-SA 4.0 license.</p>
+<p>Original Danish text is public domain.
+English translation is public domain, but rendered on page of first link under BY-NC-SA 2.0 license.
+Translation provided here by Chaered under CC-BY-SA 4.0 license.</p>
 
-<hr/>
+<p><i>
+Andanéya enge cundo ye merne vesta aranel, mal maune hyen ná anwa aranel.<br/>
+Lelendes quanna ambaresse na tuve síte, mal allasse túves ya mernes.<br/>
+Enger line aranéli, mal ecceþie quima náner anwar náne urucarin.<br/>
+Illume uma tesse lánes yalle moa ná.<br/>
+San entulles mar ar nánes nairea, pan lai yestanes ná ó anwa aranel.<br/>
+<br/>
+Andúnesse aica raumo untane; enger hundo ar menel-íta, ulle tal, náne amarúcima!<br/>
+Tá hlasser tambie i ostova andondesse, ar i enwina aran menne na apanta sa.<br/>
+<br/>
+Enge aranel tarila tasse pono i andon.<br/>
+Mal, ela! taite nemesta ya ulo ar vaiwe acárier sé neme.<br/>
+I nén sirinye undu findesseryallo ar hamperyallo; sirinyes mina tille hyapatyatwa ar en et rastulcettallo.<br/>
+Ananta quentes i nás anwa aranel.<br/>
+<br/>
+“Mára, rongo túvalme sa” sanne enwina tári.<br/>
+Mal quentes munta, mennes caimaþambenna, lempes ilya caima-lanne caima-talamello, ar sestanes erdevaine talda; en hostanes mustalami yuquain ar sestanesset to i erdevaine, ar an quá-finie toaller yuquain orwa to i mustalami.<br/>
+<br/>
+Sasse orwa maune aranélen caita ter quanna lóme.<br/>
+Amauresse, maquenter sen yalle olóries.<br/>
+<br/>
+“A, arihraia!” eques.<br/>
+“Hraia ohólien hendinyat quanna lómesse. Rie Manwe ista ya enge i caimasse, mal caiteánen sarda natesse, etta nanye saqua ildome hroanyasse. Nás naira!”<br/>
+<br/>
+Sí sintelte i isse anwa aranel, pan i erdevaine perestaniéne se ter mustalami yuquain ar quá-finie toaller yuquain.<br/>
+Alquenen ece ná tande cityalea, hequa anwa aranélen.<br/>
+<br/>
+Etta i cundo vestane hye, pan sí sintes i nánes ó anwa aranel; ar sestaner i erdevaine vanwiemardenna, yasse tensi ece mon cenitas, qui alquen ipílie sa.<br/>
+<br/>
+Mai, tama ná naite nyarna.
+</i></p>
 
-<p><i>Andanéya enge cundo ye merne vesta aranel, mal maune hyen ná anwa aranel.
-Lelendes quana ardasse na tuve síte, mal allasse túve ya mernes.
-Enger line araneli, mal ecceþie quima náner anwar náne urucarin.
-Vore enge uma pá te ya láne yalle moa ná.
-San entulles mar ar nánes nairea, pan lai yestanes ná ó anwa aranel.</i></p>
+<p>
+Once upon a time there was a prince who wanted to marry a princess; but she would have to be a real princess.<br/>
+He traveled all over the world to find one, but nowhere could he get what he wanted.<br/>
+There were princesses enough, but it was difficult to find out whether they were real ones.<br/>
+There was always something about them that was not as it should be.<br/>
+So he came home again and was sad, for he would have liked very much to have a real princess.<br/>
+<br/>
+One evening a terrible storm came on; there was thunder and lightning, and the rain poured down in torrents.<br/>
+Suddenly a knocking was heard at the city gate, and the old king went to open it.<br/>
+<br/>
+It was a princess standing out there in front of the gate.<br/>
+But, good gracious! what a sight the rain and the wind had made her look.<br/>
+The water ran down from her hair and clothes; it ran down into the toes of her shoes and out again at the heels.<br/>
+And yet she said that she was a real princess.<br/>
+<br/>
+"Well, we&apos;ll soon find that out," thought the old queen.<br/>
+But she said nothing, went into the bedroom, took all the bedding off the bedstead, and laid a pea on the bottom; then she took twenty mattresses and laid them on the pea, and then twenty eider-down beds on top of the mattresses.<br/>
+<br/>
+On this the princess had to lie all night.<br/>
+In the morning she was asked how she had slept.<br/>
+<br/>
+"Oh, very badly!" said she.<br/>
+"I have scarcely closed my eyes all night. Heaven only knows what was in the bed, but I was lying on something hard, so that I am black and blue all over my body. It&apos;s horrible!"<br/>
+<br/>
+Now they knew that she was a real princess because she had felt the pea right through the twenty mattresses and the twenty eider-down beds.<br/>
+Nobody but a real princess could be as sensitive as that.<br/>
+<br/>
+So the prince took her for his wife, for now he knew that he had a real princess; and the pea was put in the museum, where it may still be seen, if no one has stolen it.<br/>
+<br/>
+There, that is a true story.
+</p>
 
-<p><i>Andúnesse aica raumo untane; enger hundo ar menelita, ulle tal, náne amarúcima!
-Tá hlasser tambie ostova andondesse, ar enwina aran menne na apanta sa.</i></p>
-
-<p><i>Náne aranel tarila sisse pono i andon.
-Mal, ela! taite nemesta ya ulo ar vaiwe acárier sé neme.
-I nén sirinye undu findesseryallo ar hamperyallo; sirinyes tal mina tille hyapatyatwa ar en et rastulceryalto.
-Ananta quentes i nás anwa aranel.</i></p>
-
-<p><i>“Mára, rongo túvalme sa” sanne enwina tári.
-Mal quentes munta, mennes caimaþambenna, lempe quane caima-lanni caima-talamello, ar sestane erdevaine talda; en hostanes mustalami yuquain ar sestanesset or i erdevaine, ar an quá-finie toaller yuquain orwa pá i mustalami.</i></p>
-
-<p><i>Or si maune aranelen caita ter qua lóme.
-Amauresse, maquenter sen malle olóries.</i></p>
-
-<p><i>“A, amahraia!” eques.
-“Hraia oholien hendinyat qua lómesse. Rie Manwe ista má enge caimasse, mal caiteánen sarda natesse, etta nanye saqua ildome hrondonyasse. Nás naira!”</i></p>
-
-<p><i>Sí sintelte i isse anwa aranel, pan i erdevaine perestiénes se téra ter mustalami yuquain ar quá-finie toaller yuquain.
-Ná tande cityalea ece alquenen, hequa anwa aranélen.</i></p>
-
-<p><i>Etta i cundo vertane hye, pan sí sintes i nánes ó anwa aranel; ar sestaner i erdevaine autamardenna, yasse tensi ece a-cene, cé alquen ipilie sa.</i></p>
-
-<p><i>Mai, ta ná naite nyarna.</i></p>
-
-<hr/>
-
-<p>(English)</p>
-
-<p>Once upon a time there was a prince who wanted to marry a princess; but she would have to be a real princess.
-He traveled all over the world to find one, but nowhere could he get what he wanted.
-There were princesses enough, but it was difficult to find out whether they were real ones.
-There was always something about them that was not as it should be.
-So he came home again and was sad, for he would have liked very much to have a real princess.</p>
-
-<p>One evening a terrible storm came on; there was thunder and lightning, and the rain poured down in torrents.
-Suddenly a knocking was heard at the city gate, and the old king went to open it.</p>
-
-<p>It was a princess standing out there in front of the gate.
-But, good gracious! what a sight the rain and the wind had made her look.
-The water ran down from her hair and clothes; it ran down into the toes of her shoes and out again at the heels.
-And yet she said that she was a real princess.</p>
-
-<p>"Well, we'll soon find that out," thought the old queen.
-But she said nothing, went into the bedroom, took all the bedding off the bedstead, and laid a pea on the bottom; then she took twenty mattresses and laid them on the pea, and then twenty eider-down beds on top of the mattresses.</p>
-
-<p>On this the princess had to lie all night.
-In the morning she was asked how she had slept.</p>
-
-<p>"Oh, very badly!" said she.
-"I have scarcely closed my eyes all night. Heaven only knows what was in the bed, but I was lying on something hard, so that I am black and blue all over my body. It's horrible!"</p>
-
-<p>Now they knew that she was a real princess because she had felt the pea right through the twenty mattresses and the twenty eider-down beds.
-Nobody but a real princess could be as sensitive as that.</p>
-
-<p>So the prince took her for his wife, for now he knew that he had a real princess; and the pea was put in the museum, where it may still be seen, if no one has stolen it.</p>
-
-<p>There, that is a true story.</p>
 
 <hr/>
 
@@ -129,9 +131,9 @@ Nobody but a real princess could be as sensitive as that.</p>
 
 <p>See, det var en rigtig Historie!</p>
 
-<p>© 2025, Chaered.</p>
+<p>&copy; 2025, Chaered</p>
 
-<p>This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by-nc-sa/4.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.
+<p>This work is licensed under the CC-BY-SA 4.0 International License. To view a copy of this license, visit http://creativecommons.org/licenses/by-sa/4.0/ or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.</p>
 
 </body>
 </html>
