--- a/src/main/webapp/elvish-composition-archive/index.html
+++ b/src/main/webapp/elvish-composition-archive/index.html
@@ -8,7 +8,7 @@
 
 <h1>Elvish Composition Archive</h1>
 
-<p>Version 0.2.5 - May 23, 2025</p>
+<p>Version 0.2.6 - July 19, 2025</p>
 
 <p>This web page and its content are a mirror of the <i>Elvish Composition Archive</i>: a collection of works in Tolkien’s Elvish languages, Quenya and Sindarin. Content is organized alphabetically by <a href="#authors">author</a>. If you want to get (or even host) your own copy of the archive, see the section on <a href="#licensing">mirrors, downloads and licensing</a>. If you want to contribute to the archive, see the section on <a href="#submissions">submissions</a>.</p>
 
@@ -55,6 +55,7 @@
 <li><a href="chaered/ruive.html">Tere Ruive</a> (Quenya, 2025)</li>
 <li><a href="chaered/quain.html">Duckfleet</a> (Quenya, 2025)</li>
 <li><a href="chaered/mana.html">Mana Caruval</a> (Quenya, 2025)</li>
+<li><a href="chaered/ugly-duckling.html">The Ugly Duckling</a> (Quenya, 2025)</li>
 </ul>
 
 <h3><a id="delle"></a>Delle</h3>
