--- a/src/main/webapp/elvish-essays/late-sindarin-articles-and-mutations.html
+++ b/src/main/webapp/elvish-essays/late-sindarin-articles-and-mutations.html
@@ -357,7 +357,7 @@ by Paul Strack (2025)
 <li><b>lh → i·thl, i·lh:</b> *<i>in-sl</i> &gt; <i>insl</i> &gt; <i>isl</i> &gt; <i>ithl</i>; <i>lheweg</i> “ear” → <i>i·thlewig</i> later <i>i·lhewig</i> (CEA).</li>
 </ul>
 
-<p>There are no example words with these nasal mutations in Tolkien’s earlier writings, but as discussed above under vocalic mutations, Tolkien did address the sound changes themselves in Quenya Notes (QN) from 1957, where he compared the (vocalic) mutations of <i>na</i> “to” with the (nasal) mutations <i>na(n)</i> “with, of”. In these 1957 notes, vocalic and nasal mutations were identical, with archaic <i>thr/thl</i> and (presumably) modern <i>rh/lh</i>: “archaic <i>nath-r</i>, <i>nath-l</i> for <i>nan-rh</i>, <i>nan-lh</i>. <i>nan</i>|<i>sr</i> &gt; <i>nassr</i> &gt; <i>nathr</i>” (PE17/147). In these 1957 notes, however, it seems <i>n</i> was restored by analogy before <i>rh, lh</i>: <i>nan-rh</i>, <i>nan-lh</i>.</p>
+<p>There are no example words with these nasal mutations in Tolkien’s earlier writings, but as discussed above under vocalic mutations, Tolkien did address the sound changes themselves in Quenya Notes (QN) from 1957, where he compared the (vocalic) mutations of <i>na</i> “to” with the (nasal) mutations <i>na(n)</i> “with, of”. In these 1957 notes, vocalic and nasal mutations were identical, with archaic <i>thr/thl</i> and (presumably) modern <i>rh/lh</i>: “archaic <i>nath-r</i>, <i>nath-l</i> for <i>nan-rh</i>, <i>nan-lh</i>. <i>nan</i>|<i>sr</i> &gt; <i>nassr</i> &gt; <i>nathr</i>” (PE17/147).</p>
 
 <h3><a name="3.8"></a>3.8 Labialized Velar Stop <i>gw</i></h3>
 
