--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -11,7 +11,12 @@
 <hr>
 <h1>Version History</h1>
 
-<p>v0.8.11.1</p>
+<p>v0.8.12</p>
+<ul>
+<li>Started dictionary entries for semantic category 12 = Spatial Relations.</li>
+<li>Caught up on neologism entries.</li>
+</ul>
+<p>v0.8.11.1 (June 29, 2025)</p>
 <ul>
 <li>Follow up on PE23, documenting Quenya correlatives.</li>
 </ul>
