--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -116,7 +116,7 @@
 <li><b><a href="#c1-2-1-2">1.2.1.2 Word for “The”</a></b></li>
 </ul>
 
-<p>Nouns are the most basic part of speech, describing a person, place or thing. Quenya nouns can be grouped by whether they end a consonant (consonantal), a vowel (vocalic) or the vowel <i>ë</i> (e-noun). Here is a sample of Quenya nouns with their meanings:</p>
+<p>Nouns are the most basic part of speech, describing a person, place or thing. Quenya nouns can be grouped by whether they end in a consonant (consonantal), a vowel (vocalic) or the vowel <i>ë</i> (e-noun). Here is a sample of Quenya nouns with their meanings:</p>
 
 <ul class="vocab-list">
 <li><b>aiwë</b> <i>n.</i> “bird” ¹</li>
