--- a/src/main/webapp/elvish-composition-archive/chaered/ruive.html
+++ b/src/main/webapp/elvish-composition-archive/chaered/ruive.html
@@ -3,7 +3,7 @@
 <link rel='stylesheet' type='text/css' href='../css/global.css'></link>
 <title>Tere Ruive by Chaered</title>
 </head>
-
+<script src="../../js/dark-mode.js" defer></script>
 <body>
 <p>
 <span class='archive-nav'><a href='../index.html'>Home</a></span>
