--- a/src/main/webapp/elvish-composition-archive/rinor/glorfinniel-ah-i-medli-neledh.html
+++ b/src/main/webapp/elvish-composition-archive/rinor/glorfinniel-ah-i-medli-neledh.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
 <link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 <title>lorfinniel ah i·Medli Neledh by Rínor</title>
-
+    <script src="../../js/dark-mode.js" defer></script>
 </head>
 <body>
 
