--- a/src/main/webapp/general/phonetic-descriptions.html
+++ b/src/main/webapp/general/phonetic-descriptions.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Style-Type" content="text/css">
     <title>Eldamo : Phonetic Descriptions</title>
     <link rel="stylesheet" type="text/css" href="../css/global.css">
+    <script src="../js/dark-mode.js" defer></script>
 </head>
 <body>
 <p>[<a href="../index.html">Home</a>]</p>
