--- a/src/main/webapp/translations/international-searches.html
+++ b/src/main/webapp/translations/international-searches.html
@@ -6,6 +6,7 @@
     <title>Eldamo : International Searches</title>
     <link rel="stylesheet" type="text/css" href="../css/global.css">
     <script src="../js/add-queries.js"></script>
+    <script src="../js/dark-mode.js" defer></script>
 </head>
 <body>
 <p>[<a href="../index.html">Home</a>]</p>
