--- a/src/main/webapp/elvish-composition-archive/almariel/soldier-poet-king.html
+++ b/src/main/webapp/elvish-composition-archive/almariel/soldier-poet-king.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
 <link rel="stylesheet" type="text/css" href="../css/global.css"></link>
 <title>Soldier, Poet, King by Almáriel</title>
-
+    <script src="../../js/dark-mode.js" defer></script>
 </head>
 <body>
 
