--- a/src/main/webapp/elvish-essays/late-sindarin-articles-and-mutations.html
+++ b/src/main/webapp/elvish-essays/late-sindarin-articles-and-mutations.html
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
 <link rel="stylesheet" type="text/css" href="css/global.css"></link>
 <title>Sindarin Articles and Mutations from Parma Eldalamberon 23</title>
+    <script src="../js/dark-mode.js" defer></script>
 </head>
 <body>
 
