--- a/src/main/webapp/elvish-essays/vocalization-of-spirants-in-Sindarin.html
+++ b/src/main/webapp/elvish-essays/vocalization-of-spirants-in-Sindarin.html
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
 <link rel="stylesheet" type="text/css" href="css/global.css">
 <title>Vocalization of Spirants in Sindarin and Noldorin</title>
+    <script src="../js/dark-mode.js" defer></script>
 </head>
 <body>
 
