--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-13.html
@@ -9,7 +9,7 @@
 <script src="../js/sindarin-beleriand.glaem.js"></script>
 <script src="../js/sindarin-classical.glaem.js"></script>
 <script src="../js/transcribe.js"></script>
-
+    <script src="../js/dark-mode.js" defer></script>
 <title>Eldamo Introductory Quenya - Chapter 13</title>
 
 </head>
